Fixing PayPal Button & Suggested Ask Highlight
Making the "Donate with PayPal" button not break on mobile for the
"Alternate" style of donate pages. Also added JS to properly highlight
the amount box if AK suggests a donation amount.

--- a/scss/_styles.scss
+++ b/scss/_styles.scss
@@ -1105,20 +1105,62 @@ ul#ak-errors {
 	}
 
 	.button.alert {
-		font-size: 2rem;
+		font-size: 1.5rem;
 		padding: 0 0.25rem;
 		width: 100%;
 		height: 52px;
 
 		@media #{$small-only} {
-			height: 86px;
-			font-size: 3.5rem;
+			font-size: 2.5rem;
 		}
 	}
 
 	.paypal {
 		img {
 			width: 100%;
+		}
+	}
+
+	#paypal-button {
+		font-family: Verdana, Geneva, sans-serif;
+		text-align: left;
+		padding: 0.25rem;
+		width: 100%;
+		height: 52px;
+		background: #179bd7;
+
+		&:hover {
+			background: #253b80;
+		}
+
+		.paypal-small {
+			display: block;
+			font-size: rem-calc(14px);
+			line-height: 1;
+		}
+
+		.paypal-large {
+			display: block;
+			font-size: rem-calc(22px);
+			text-align: center;
+			font-style: italic;
+			font-weight: bold;
+		}
+
+		@media #{$small-only} {
+			text-align: center;
+			margin-top: 1rem;
+
+			.paypal-small {
+				font-size: 1.25rem;
+				display: inline;
+			}
+
+			.paypal-large {
+				font-size: rem-calc(30px);
+				display: inline;
+				padding-left: 0.5rem;
+			}
 		}
 	}
 }
@@ -1196,6 +1238,33 @@ ul#ak-errors {
 		.paypal {
 			float: left;
 		}
+
+		#paypal-button {
+			font-family: Verdana, Geneva, sans-serif;
+			text-align: left;
+			padding: 0.25rem;
+			width: 100%;
+			height: 50px;
+			background: #179bd7;
+
+			&:hover {
+				background: #253b80;
+			}
+
+			.paypal-small {
+				display: block;
+				font-size: rem-calc(14px);
+				line-height: 1;
+			}
+
+			.paypal-large {
+				display: block;
+				font-size: rem-calc(22px);
+				text-align: center;
+				font-style: italic;
+				font-weight: bold;
+			}
+		}
 	}
 
 	.amounts {
@@ -1220,11 +1289,13 @@ ul#ak-errors {
 			}
 		}
 
-		.medium-8 {
+		.small-8 {
 			margin-bottom: 1rem;
 		}
 
 		.amount-other {
+			float: left;
+
 			label {
 				line-height: 42px;
 			}
@@ -1383,6 +1454,23 @@ ul#ak-errors {
 			div, input {
 				&:first-child {
 					margin-bottom: 1rem;
+				}
+			}
+
+			&.row {
+				#paypal-button {
+					text-align: center;
+
+					.paypal-small {
+						font-size: 1.25rem;
+						display: inline;
+					}
+
+					.paypal-large {
+						font-size: rem-calc(30px);
+						display: inline;
+						padding-left: 0.5rem;
+					}
 				}
 			}		
 		}
